// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should create preview of nodes 1`] = `
<Fragment>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    <span
      title="Running, canceled, or completed flow nodes"
    >
      Running, canceled, or completed flow nodes
    </span>
  </ForwardRef>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should create preview of selected nodes linked by nor 1`] = `
<Fragment>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    <span
      title="Not executed flow nodes"
    >
      Not executed flow nodes
    </span>
  </ForwardRef>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemOperator"
        >
           
          and
           
        </span>
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should create preview of selected nodes linked by or 1`] = `
<Fragment>
  <ForwardRef
    className="parameterName"
    type="blue"
  >
    <span
      title="Running, canceled, or completed flow nodes"
    >
      Running, canceled, or completed flow nodes
    </span>
  </ForwardRef>
  <ul
    className="previewList filterText"
  >
    <li
      className="previewItem"
      key="0"
    >
      <span>
         
        <b>
          foo
        </b>
      </span>
    </li>
    <li
      className="previewItem"
      key="1"
    >
      <span>
         
        <span
          className="previewItemOperator"
        >
           
          or
           
        </span>
        <b>
          foo
        </b>
      </span>
    </li>
  </ul>
</Fragment>
`;

exports[`should show the id of the flow node if the name is null 1`] = `
<b>
  bar
</b>
`;
